<?xml version="1.0" encoding="UTF-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.geekgamerz.clarestart.MainActivity">


        <TableLayout
            android:id="@+id/startJourneyLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:contentDescription="@string/select_card_img"
                app:srcCompat="@drawable/princess" />


            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:paddingTop="10dp"
                    android:text="@string/available_cards" />

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />

            </TableRow>


            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:paddingTop="10dp"
                    android:text="@string/current_level" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:inputType="number" />

            </TableRow>


            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">



                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:paddingTop="10dp"
                    android:text="@string/arena" />

                <Button
                    android:text="K"
                    android:layout_column="1"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonIncrease" />

                <TextView
                    android:id="@+id/number"
                    android:layout_column="1"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/arena" />
                <Button
                    android:text="l"
                    android:layout_column="1"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonDecrease" />


            </TableRow>


            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/card_req" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1" />

            </TableRow>


            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/total_gold" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1" />

            </TableRow>

        </TableLayout>


        <TableLayout
            android:id="@+id/table1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/startJourneyLinearLayout"
            android:stretchColumns="1">


            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_gravity="center" />

            </TableRow>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="100" />

            <TextView
                android:id="@+id/progresstv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <Button
                android:id="@+id/pbbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_progress" />
            <EditText
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </TableLayout>


    </RelativeLayout>

</ScrollView>